--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "cli.js",
   "license": "MIT",
+  "author": "freedom_stream",
   "dependencies": {
     "ejs": "^3.1.5",
     "inquirer": "^7.3.3"
