完善基础内容

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "self"
   ],
   "dependencies": {
+    "chalk": "^4.1.0",
     "commander": "^6.1.0",
     "ejs": "^3.1.5",
     "inquirer": "^7.3.3"
