--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "self"
   ],
   "dependencies": {
+    "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "commander": "^6.1.0",
+    "download-git-repo": "^3.0.2",
     "ejs": "^3.1.5",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "ora": "^5.1.0"
   }
 }
